started with functions

--- a/00_exercises.ipynb
+++ b/00_exercises.ipynb
@@ -7,9 +7,10 @@
     "# Introduction \n",
     "These exercises are meant for you to practice your skills. The sections are numbered according to the chapter numbering so you know where to look for exercises of a particular chapter.  \n",
     "\n",
-    "You can deal with the exercises in several ways. The most convenient is to clone or download the entire repository, and work on the notebook on your own machine. You can also download only this notebook, but that will not include hints and solutions.    \n",
+    "You can deal with the exercises in several ways. The most convenient is to clone or download the entire repository, and work on the notebook on your own machine. You can also download only this notebook, but that will not include all  solutions.    \n",
     "\n",
-    "Hints and/or solutions are often included; they can be displayed where it says \"&#10149; Click to see the solution\" or \"&#10149; Give me a hint\". Give it a try:"
+    "Hints and/or solutions are often included; they can be displayed where it says <span style = \"color:OrangeRed;cursor:pointer;\">\"&#10149; Click to see the solution\"</span> or <span style = \"color:OrangeRed;cursor:pointer;\">\"&#10149; Give me a hint\"</span>. Unfortunately, rendering of these hints is not flawless: they only get displayed correctly in a hosted notebook environment (not in a static viewer such as nbviewer or github).  \n",
+    "Give it a try:"
    ]
   },
   {
@@ -17,16 +18,17 @@
    "metadata": {},
    "source": [
     "<details>\n",
-    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Click to see solution!</summary>\n",
-    "  \n",
+    "<summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Click to see solution!</summary>\n",
+    "\n",
     "```python\n",
     "first_name = \"John\"\n",
     "surname = \"Doe\"\n",
     "print(f'good morning, {first_name} {surname}!')\n",
     "```\n",
-    "    \n",
+    "\n",
+    "<br>\n",
     "Of course, you should always really try to solve it yourself before going to the easy-peasy zone\n",
-    "</details>"
+    "</details>\n"
    ]
   },
   {
@@ -103,6 +105,7 @@
     "```python\n",
     "return math.pi*(1/2*diameter)**2\n",
     "```\n",
+    "    \n",
     "</details>"
    ]
   },
@@ -362,38 +365,25 @@
    "source": [
     "### 02.2 dict\n",
     "\n",
-    "There are (at least) three ways to create and fill a dict. Use the suggested resources of chapter 1 to find them. Demonstrate these techniques to create this dict: `{513: 'hammer', 322: 'screwdriver', 462: 'nailgun'}`.\n",
-    "<br><br>\n",
+    "There are (at least) three ways to create and fill a dict. Use the suggested resources of chapter 1 to find them. Demonstrate these techniques to create a variable named `inventory` holding this dict:  \n",
     "\n",
     "```python  \n",
-    "inventory = {513: 'hammer', 322: 'screwdriver', 462: 'nailgun'}\n",
+    "{513: 'hammer', 322: 'screwdriver', 462: 'nailgun'}\n",
     "```\n",
     "\n",
-    "<br><br>\n",
+    "<br>\n",
     "\n",
     "<details>\n",
     "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me a hint!</summary>\n",
-    "  \n",
-    "```python  \n",
-    "inventory = {513: 'hammer', 322: 'screwdriver', 462: 'nailgun'}\n",
-    "```\n",
-    "\n",
-    "As a literal.\n",
+    "  Use a literal with the format `inventory = {key1: value1, key2: value2}`.\n",
+    "    \n",
     "</details>\n",
     "\n",
     "<br />\n",
     "\n",
     "<details>\n",
     "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me another hint!</summary>\n",
-    "\n",
-    "```python  \n",
-    "    inventory = dict()\n",
-    "    inventory[513] = 'hammer'\n",
-    "    inventory[322] = 'screwdriver'\n",
-    "    inventory[462] = 'nailgun'\n",
-    "```\n",
-    "\n",
-    "Using assignment of individual items.\n",
+    "Create an empty dict, `inventory = dict()` and add individual items like this `inventory[513] = 'hammer'`.\n",
     "</details>\n",
     "\n",
     "<br />\n",
@@ -401,7 +391,7 @@
     "<details>\n",
     "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me the complete solution!</summary>\n",
     "  \n",
-    "```python\n",
+    "<pre><code>\n",
     "inventory = {513: 'hammer', 322: 'screwdriver', 462: 'nailgun'}\n",
     "print(inventory)\n",
     "\n",
@@ -413,9 +403,9 @@
     "\n",
     "inventory = dict([[513, 'hammer'], [322, 'screwdriver'], [462, 'nailgun']])\n",
     "print(inventory)\n",
-    "```\n",
+    "</code></pre>\n",
     "    \n",
-    "The third technique uses a list of 2-element-lists.\n",
+    "This technique uses a list of 2-element-lists passed as argument to the `dict()` function..\n",
     "</details>\n"
    ]
   },
@@ -425,62 +415,38 @@
    "source": [
     "### 02.3 dict\n",
     "\n",
-    "There are also several ways to make this.\n",
-    "<br><br>\n",
-    "\n",
-    "<details>\n",
-    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me a hint!</summary>\n",
-    "  \n",
-    "```python\n",
-    "inventory = {513: 'hammer', 322: 'screwdriver', 462: 'nailgun'}\n",
-    "```\n",
-    "\n",
-    "As a literal.\n",
-    "</details>\n",
-    "\n",
-    "<br />\n",
-    "\n",
-    "<details>\n",
-    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me another hint!</summary>\n",
-    "  \n",
-    "```python\n",
-    "inventory = dict()\n",
-    "inventory[513] = 'hammer'\n",
-    "inventory[322] = 'screwdriver'\n",
-    "inventory[462] = 'nailgun'\n",
-    "```\n",
-    "\n",
-    "Using assignment of individual items.\n",
-    "</details>\n",
-    "\n",
-    "<br />\n",
-    "\n",
-    "<details>\n",
-    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me the complete solution!</summary>\n",
-    "  \n",
-    "```python\n",
-    "inventory = {513: 'hammer', 322: 'screwdriver', 462: 'nailgun'}\n",
-    "print(inventory)\n",
-    "\n",
-    "inventory = dict()\n",
-    "inventory[513] = 'hammer'\n",
-    "inventory[322] = 'screwdriver'\n",
-    "inventory[462] = 'nailgun'\n",
-    "print(inventory)\n",
-    "\n",
-    "inventory = dict([[513, 'hammer'], [322, 'screwdriver'], [462, 'nailgun']])\n",
-    "print(inventory)\n",
-    "```\n",
-    "    \n",
-    "The third technique uses a list of 2-element-lists.\n",
-    "</details>\n"
+    "There are also several ways to make this block of code work."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"hello\")"
    ]
   },
   {
