first draft of chapter 3

--- a/02_data.ipynb
+++ b/02_data.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data types\n",
+    "# Data\n",
+    "Without data there is not much computing to be done. All programs take data as input (from file, a database, keyboard, a GUI) and most of them also generate data as output. In essence, there are only a few basic types of data: text and numbers. Data can be aggregated in more complex structures such as collections and objects and that is where the fun starts.\n",
+    "\n",
     "In this chapter we'll explore the different base data types of Python, both **scalar** and **collection**.  \n",
     "The main aspects of working with collection types are accessing its elements individually or iteratively.  "
    ]
