work on flow control

--- a/02_data.ipynb
+++ b/02_data.ipynb
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -631,6 +631,40 @@
       "Bobolin\n",
       "None\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'__name__': '__main__',\n",
+       " '__doc__': 'Automatically created module for IPython interactive environment',\n",
+       " '__package__': None,\n",
+       " '__loader__': None,\n",
+       " '__spec__': None,\n",
+       " '__builtin__': <module 'builtins' (built-in)>,\n",
+       " '__builtins__': <module 'builtins' (built-in)>,\n",
+       " '_ih': ['',\n",
+       "  'zoo = {\\'lion\\' : \\'Carl\\',\\n      \\'leopard\\' : [\\'Sue\\', \"Lilith\"],\\n      \\'rhino\\' : \\'Bobolin\\'}\\n\\nprint(zoo.get(\"leopard\"))\\n\\nif (zoo.get(\\'lion\\')):       # workst because get() returns None when key is absent, and None evaulates to False\\n    print(\\'we have lions!\\')\\n\\n# better solution \\nif (\\'lion\\' in zoo):\\n    print(\\'we have lions!\\')\\n\\nprint(zoo[\\'rhino\\'])\\n\\n#print(zoo[\\'giraffe\\'])     # gives a KeyError\\nprint(zoo.get(\\'giraffe\\'))  # returns None\\n\\nvars()'],\n",
+       " '_oh': {},\n",
+       " '_dh': [PosixPath('/Users/michielnoback/git_projects/python_intro')],\n",
+       " 'In': ['',\n",
+       "  'zoo = {\\'lion\\' : \\'Carl\\',\\n      \\'leopard\\' : [\\'Sue\\', \"Lilith\"],\\n      \\'rhino\\' : \\'Bobolin\\'}\\n\\nprint(zoo.get(\"leopard\"))\\n\\nif (zoo.get(\\'lion\\')):       # workst because get() returns None when key is absent, and None evaulates to False\\n    print(\\'we have lions!\\')\\n\\n# better solution \\nif (\\'lion\\' in zoo):\\n    print(\\'we have lions!\\')\\n\\nprint(zoo[\\'rhino\\'])\\n\\n#print(zoo[\\'giraffe\\'])     # gives a KeyError\\nprint(zoo.get(\\'giraffe\\'))  # returns None\\n\\nvars()'],\n",
+       " 'Out': {},\n",
+       " 'get_ipython': <bound method InteractiveShell.get_ipython of <ipykernel.zmqshell.ZMQInteractiveShell object at 0x107252a30>>,\n",
+       " 'exit': <IPython.core.autocall.ZMQExitAutocall at 0x107269190>,\n",
+       " 'quit': <IPython.core.autocall.ZMQExitAutocall at 0x107269190>,\n",
+       " '_': '',\n",
+       " '__': '',\n",
+       " '___': '',\n",
+       " '_i': '',\n",
+       " '_ii': '',\n",
+       " '_iii': '',\n",
+       " '_i1': 'zoo = {\\'lion\\' : \\'Carl\\',\\n      \\'leopard\\' : [\\'Sue\\', \"Lilith\"],\\n      \\'rhino\\' : \\'Bobolin\\'}\\n\\nprint(zoo.get(\"leopard\"))\\n\\nif (zoo.get(\\'lion\\')):       # workst because get() returns None when key is absent, and None evaulates to False\\n    print(\\'we have lions!\\')\\n\\n# better solution \\nif (\\'lion\\' in zoo):\\n    print(\\'we have lions!\\')\\n\\nprint(zoo[\\'rhino\\'])\\n\\n#print(zoo[\\'giraffe\\'])     # gives a KeyError\\nprint(zoo.get(\\'giraffe\\'))  # returns None\\n\\nvars()',\n",
+       " 'zoo': {'lion': 'Carl', 'leopard': ['Sue', 'Lilith'], 'rhino': 'Bobolin'}}"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
