--- a/04_functions.ipynb
+++ b/04_functions.ipynb
@@ -74,7 +74,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -252,6 +251,21 @@
     "print(distance_meters2(speed_km_h = 36))\n",
     "print(distance_meters2(speed_km_h = 36, time_sec = 5))\n",
     "#print(distance_meters2(time_sec = 5)) #TypeError!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Functions can only return one thing\n",
+    "\n",
+    "Functions can only return a single value. If you want to return more than one value, you've got to wrap them inside a collection type or class instance:  \n",
+    "\n",
+    "- list\n",
+    "- tuple\n",
+    "- dict\n",
+    "- class instance (an object)\n",
+    "- a generator function (a special kind of function)\n"
    ]
   },
   {
@@ -460,7 +474,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When creating your own scripts you should try to avoid creating (many) global variables and especially to define global variables from a local context, as was done with variable `c` in the above example..\n",
+    "When creating your own scripts you should try to avoid creating (many) global variables and especially to define global variables from a local context, as was done with variable `c` in the above example.\n",
     " "
    ]
   },
