--- a/04_functions.ipynb
+++ b/04_functions.ipynb
@@ -2,14 +2,22 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Functions"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## What are functions\n",
     "\n",
@@ -24,7 +32,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -45,7 +57,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "source": [
     "This function asks for the users' name and serves it back with a greeting.\n",
     "It _calls_ two functions itself to perform its task: `input()` which will read input entered using a keyboard on the command line and `print()` which outputs text to that same command-line (also called terminal or console). \n",
@@ -67,7 +83,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "In this chapter we'll be looking at how to design, implement and call (use) functions. \n",
     "We'll finish off with an overview of some of the most-used built-in function of the Python language."
@@ -75,7 +95,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Creating and using functions\n",
     "\n",
@@ -86,8 +110,17 @@
     "- have an argument list, but it may be empty: `()`\n",
     "- have a function body starting after a colon, indented one level with respect to the function definition line, and with at the least the keyword `pass` in it.\n",
     "\n",
-    "_Naming convention_ for functions state that they should be lowercase (verbs), with words separated by underscores to improve readability.\"\n",
-    "\n",
+    "_Naming convention_ for functions state that they should be lowercase (verbs), with words separated by underscores to improve readability.\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "Here is a minimal function that is perfectly legal and perfectly useless:\n",
     "\n",
     "```python\n",
@@ -95,9 +128,21 @@
     "    pass\n",
     "```\n",
     "\n",
-    "The indentation level is usually 4 spaces, but must be the same within a single code block (and you are strongly encouraged to be consistent within all your source files). In Python, whitespaces (space, tab and newline characters) are an essential part of the syntax! \n",
     "\n",
-    "Here are some variations that will NOT run because of a syntax error. This one gives `IndentationError: expected an indented block` because there is no indentation in the function body:\n",
+    "The indentation level is usually 4 spaces, but must be the same within a single code block (and you are strongly encouraged to be consistent within all your source files). In Python, whitespaces (space, tab and newline characters) are an essential part of the syntax! "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Here are some variations that will NOT run because of a syntax error.  \n",
+    "\n",
+    "This one gives `IndentationError: expected an indented block` because there is no indentation in the function body:\n",
     "\n",
     "```python\n",
     "def do_nothing():\n",
@@ -110,7 +155,17 @@
     "def do_nothing():\n",
     "    print(\"one\")\n",
     "  print(\"two\")\n",
-    "```\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "\n",
     "This one gives a `SyntaxError: invalid syntax` because there is no colon to start the function body:\n",
     "\n",
@@ -131,7 +186,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "source": [
     "<div class=\"alert alert-block alert-info\">\n",
     "    <img src=\"pics/64px-Simple_Information.png\" style=\"float:left;margin-right:10px;\">\n",
@@ -144,7 +203,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "source": [
     "Now for a more realistic -though still simple- example: calculating distance from speed and time. Note that in the function below the **parameters** have been given names to communicate the units in which they should be passed. Yes this is important! A Mars orbiter crashed in 1999 because of a coding mistake involving different use of measurement units, costing $193 million (see [The seven most expensive Bugs in code history](https://www.zentao.pm/blog/the-seven-most-expensive-bugs-in-code-history-1137.html)). We'll see in a later section in this chapter how to document this as well in a more human-readable manner using docstrings. "
    ]
@@ -152,7 +215,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -175,7 +242,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "source": [
     "As you can see in the above example, calling functions is quite flexible. By using **grouping parentheses** you can do some in-place calculations within the **argument list parantheses** (yes they look exactly the same but have very different functions within the code. The only difference is their context.  \n",
     "\n",
@@ -184,7 +255,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "<div class=\"alert alert-block alert-info\">\n",
     "    <img src=\"pics/64px-Simple_Information.png\" style=\"float:left;margin-right:10px;\">\n",
@@ -197,7 +272,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### You've got to adhere to the contract\n",
     "\n",
@@ -218,7 +297,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "source": [
     "### Default values give more flexibility\n",
     "\n",
@@ -229,7 +312,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -255,7 +342,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### Functions can only return one thing\n",
     "\n",
@@ -270,7 +361,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "source": [
     "### Communicate intent and details via docstring\n",
     "\n",
@@ -281,7 +376,11 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -336,7 +435,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### Scope and the `global` keyword\n",
     "\n",
@@ -347,7 +450,11 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -375,7 +482,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "source": [
     "No problem here. But now the function attempts to change the value of `a`. We get an `UnboundLocalError: local variable 'a' referenced before assignment` Here, the error message is not as clear as we would possibly like it, because it seems as if the variable does not exist (yet)."
    ]
@@ -383,7 +494,11 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "ename": "UnboundLocalError",
@@ -415,7 +530,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "source": [
     "To solve this, we need to specify within the function that we are going to access the global variable `a`, using the `global` keyword. This is solved below."
    ]
@@ -423,7 +542,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "a = 12\n",
@@ -442,7 +565,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "source": [
     "That's OK again. But what if we try to do the reverse - accessing a local variable from the global context? This fails again, unless we make variable `c` global as well.  "
    ]
@@ -450,7 +577,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "a = 12\n",
@@ -472,7 +603,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "When creating your own scripts you should try to avoid creating (many) global variables and especially to define global variables from a local context, as was done with variable `c` in the above example.\n",
     " "
@@ -480,7 +615,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "source": [
     "### Advanced function stuff\n",
     "Functions are also objects and can be created within another function.\n",
@@ -492,7 +631,11 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -530,7 +673,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### Design and Testing\n",
     "\n",
@@ -541,7 +688,18 @@
     "3. **Create small functions**. If your functions spans more than 30 lines it is probable too big, split it up! If it is indented by more than 3 levels, split it up!\n",
     "4. **Use names that mean something**. Use short but descriptive names. We are way past the era where function names could not be longer than 8 characters.\n",
     "5. **Verify function arguments**. For instance, if you get a negative elapsed time, is it still a good idea to carry on? We'll discuss error handling and Exceptions in a later chapter.\n",
-    "6. **Write test code**. Something out of scope for this course, but very important nevertheless. Have a look at [unittest](https://docs.python.org/3/library/unittest.html). Below is a small example testing the distance calculation function (this test does not work in a notebook environment; run the script at `scripts/unittest_distance_calc.py` from the commandline to try out)\n",
+    "6. **Write test code**. Something out of scope for this course, but very important nevertheless. Have a look at [unittest](https://docs.python.org/3/library/unittest.html). \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "Below is a small example testing the distance calculation function (this test does not work in a notebook environment; run the script at `scripts/unittest_distance_calc.py` from the commandline to try out)\n",
     "\n",
     "```python\n",
     "import unittest\n",
@@ -578,6 +736,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
@@ -593,7 +752,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
+  },
+  "rise": {
+   "height": "90%",
+   "width": "90%"
   },
   "vscode": {
    "interpreter": {
