--- a/03_flow_control.ipynb
+++ b/03_flow_control.ipynb
@@ -3,26 +3,43 @@
   {
    "cell_type": "markdown",
    "id": "b7173bad",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Flow control\n",
     "\n",
     "Besides data, flow control is at the heart of programming. What is the use of a list if you can't iterate it? How could you ever take alterantive courses of action based on some variable value without the use of if/else blocks?\n",
     "\n",
-    "This chapter deals with all aspects concerning control of program flow or in short flow control.\n",
-    "\n",
+    "This chapter deals with all aspects concerning control of program flow or in short flow control."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c91b6051",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "These are the constructs that you will see:\n",
     "\n",
-    "- iteration (repeated execution) using `for` and `while`, and use cases for a closing `else`\n",
-    "- decision making using `if`, `elif`, `else` and its shorthand `if...else`\n",
-    "- fine-tuning these constructs using `break`, `continue` and `pass`\n",
-    "\n"
+    "- **iteration** (repeated execution) using `for` and `while`, and use cases for a closing `else`\n",
+    "- **decisions** using `if`, `elif`, `else` and its shorthand `if...else`\n",
+    "- **fine-tuning** these constructs using `break`, `continue` and `pass`"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "f2201b39",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Iteration\n",
     "\n",
@@ -42,9 +59,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "34656a15",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "fruits = ['kiwi', 'banana', 'apple', 'orange']"
@@ -53,37 +74,49 @@
   {
    "cell_type": "markdown",
    "id": "c9af3bbe",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "and here is a basic iteration"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "f9c01980",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "kiwi\n",
-      "banana\n",
-      "apple\n",
-      "orange\n"
+      "kiwi !\n",
+      "banana !\n",
+      "apple !\n",
+      "orange !\n"
      ]
     }
    ],
    "source": [
     "for fruit in fruits:\n",
-    "    print(fruit)"
+    "    print(fruit, \"!\")"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "e3df139b",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "What if we want to keep a **counter**? _Don't do this_:\n",
     "\n",
@@ -101,7 +134,11 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "c0fadb6a",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -122,7 +159,11 @@
   {
    "cell_type": "markdown",
    "id": "e9db2a21",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "If you are not interested in all items, but want to exit when you found a specific item? Use the **break** keyword:"
    ]
@@ -131,7 +172,11 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "b2306a5f",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -152,7 +197,11 @@
   {
    "cell_type": "markdown",
    "id": "254db9bb",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "As you can see `break` skips all subsequent iterations. Similarly, if you want to skip only a single iteration you can use `continue`:"
    ]
@@ -161,7 +210,11 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "1df272eb",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -183,7 +236,11 @@
   {
    "cell_type": "markdown",
    "id": "4e1176e1",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "For many of these flow control structures there is a **shorthand** if the code block to execute only constitutes a single statement. The above could also have been written as \n",
     "\n",
@@ -201,7 +258,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "b78bcc51",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -222,7 +283,11 @@
   {
    "cell_type": "markdown",
    "id": "c204d69c",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### Using `else` with a for loop\n",
     "If you want to have a block executed _after_ the for loop, you can of course simply place it below the block. However, if you want to have it executed only when no `break` has been issued you need and `else` clause:\n"
@@ -232,7 +297,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "02639ff0",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -253,7 +322,11 @@
   {
    "cell_type": "markdown",
    "id": "8c5f384b",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### The `while` loop\n",
     "\n",
@@ -265,7 +338,11 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "4906364e",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -289,7 +366,11 @@
   {
    "cell_type": "markdown",
    "id": "8ec1433a",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Conditionals\n",
     "\n",
@@ -313,7 +394,11 @@
    "cell_type": "code",
    "execution_count": 21,
    "id": "a569d540",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -336,7 +421,11 @@
   {
    "cell_type": "markdown",
    "id": "3fcf8b09",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "If you have a situation where you want more blocks to run you need to chain multiple `if`s together:"
    ]
@@ -345,7 +434,11 @@
    "cell_type": "code",
    "execution_count": 22,
    "id": "ca86b65c",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -369,12 +462,16 @@
   {
    "cell_type": "markdown",
    "id": "88dd5332",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "source": [
     "### Optional: Switch(ing)\n",
     "\n",
     "If you have a distinct set of possibilities other programming languages provide the `switch` statement. \n",
-    "In Python up to version 3.10 this was not available. In the non-executed snippet below it is shown for Python >= 3.10.\n",
+    "In Python up to version 3.10 this was not available. In the (not-executable in my Python version) snippet below it is shown for Python >= 3.10.\n",
     "\n",
     "```python\n",
     "def http_error(status):\n",
@@ -390,38 +487,18 @@
     "http_status(400)\n",
     "```\n",
     "\n",
-    "How to check the Python version is demonstrated below:\n"
+    "Below, you see how you can create switch-like structures using a dict and adding functions as values in it. Again this uses local-defined functions."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "e936fa7e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "sys.version_info(major=3, minor=9, micro=13, releaselevel='final', serial=0)"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import sys\n",
-    "sys.version_info\n",
-    "\n",
-    "sys."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "id": "09530590",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -454,6 +531,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
@@ -469,7 +547,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
