rough layout of course

--- a/05_core_library_functions.ipynb
+++ b/05_core_library_functions.ipynb
@@ -719,6 +719,15 @@
     "# filtering\n",
     "print([fruit for fruit in fruits if \"an\" in fruit])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "72c7e3d9",
+   "metadata": {},
+   "source": [
+    "## Working with modules\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
